重写TUI页面逻辑，更新README